# scientific-mcps

hdf5_slurm_plotvis_nodehardware_Esteban_NICOLAS/MCP_Server_Esteban_NICOLAS/: README.md  pyproject.toml
hdf5_slurm_plotvis_nodehardware_Esteban_NICOLAS/MCP_Server_Esteban_NICOLAS/src/: mcp_handlers.py  server.py
hdf5_slurm_plotvis_nodehardware_Esteban_NICOLAS/MCP_Server_Esteban_NICOLAS/src/capabilities/: cpu_core_handler.py  hdf5_handler.py  plot_vis_handler.py  slurm_handler.py
hdf5_slurm_plotvis_nodehardware_Esteban_NICOLAS/MCP_Server_Esteban_NICOLAS/tests/: test_capabilities_cpu_core.py  test_capabilities_hdf5.py  test_capabilities_plot_vis.py  test_capabilities_slurm.py  test_mcp_handler.py
