[project]
name = "MCP_server_ESTEBAN_NICOLAS"
version = "0.1.0"
description = "MCP server for scientific computing tasks"
authors = [
    {name = "Esteban NICOLAS"}
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.22.0",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0"
]



